Add workspace specific settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-	"vsicons.presets.angular": true
+	"vsicons.presets.angular": true,
+	"typescript.tsdk": "./node_modules/typescript/lib",
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/.DS_Store": true,
+		"**/*.js": { "when": "$(basename).ts"},
+		"**/*js.map": true
+	}
 }
